[package]
name = "randar"
version = "0.1.1"
edition = "2021"
authors = ["harrtman<skyboat.gm@gmail.com>"]
license = "MIT"
description = "The engine for create telegram bot"
repository = "https://github.com/harttman/randar/"

[dependencies]
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }